# baerlkr.github.io

./: .gitignore  404.html  404.md  CNAME  Cargo.toml  README.md  doc.html  en.html  erlang.html  erlang.md  flake.nix  index.html  index.js  keymsg.txt  profess.html  profess.md  result  schule.css  style.css  todo.html  var.css  versions.txt
.direnv/: flake-profile-1-link
.forgejo/workflows/: build_deploy.yaml
.github/workflows/: ci.yml
assets/: CNAME  button.json  hat.sh.public  human.json  lovirent.pub.asc  pubkey.asc
css/: en.css  schule.css  style.css  todo.css  var.css
doc/: 404.html  index.html  index.xml  sitemap.xml  style.css.map  styles.css.map
doc/categories/: index.html  index.xml
doc/de/: 404.html  index.html  index.xml  sitemap.xml
doc/de/categories/: index.html  index.xml
doc/de/tags/: index.html  index.xml
doc/en/: sitemap.xml
doc/page/2/: index.html
doc/posts/: index.html  index.xml
doc/posts/chemie_q1.2/: index.html
doc/posts/deutsch_q1.2/: index.html
doc/posts/geschichte_q1.2/: index.html
doc/posts/mathe_q1.2/: index.html
doc/posts/physik_q1.2/: index.html
doc/posts/powi_q1.2/: index.html
doc/posts/todo/: index.html
doc/tags/: index.html  index.xml
doc/tags/bash/: index.html  index.xml
doc/tags/chemie/: index.html  index.xml
doc/tags/deutsch/: index.html  index.xml
doc/tags/geschichte/: index.html  index.xml
en/: index.html
js/: index.js  initnotiv.js  todo.js
olaf/: index.html
schule/chemie/: Q1.2.html
schule/deutsch/: Q1.2.html
schule/geschichte/: Q1.2.html
schule/mathe/: Q1.2.html
schule/physik/: Q1.2.html
schule/powi/: Q1.2.html
src/: blog.rs  easter.rs  glow.rs  index.css  main.rs  text.rs  theme.rs  time.rs
(+31 files in other folders)
