[package]
name = "lovirent-eu"
version = "3.1.0"
authors = ["Lovis Rentsch <root@lovirent.eu>"]
edition = "2021"
license = "EUPLv1.2"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Event", "MouseEvent", "console", "CssStyleDeclaration", "EventTarget", "EventListener", "CssStyleRule"] }

[profile.release]
lto = true
opt-level = 3
