[package]
name = "lovirent-eu"
version = "3.2.5"
authors = ["Lovis Rentsch <root@lovirent.eu>"]
edition = "2021"
license = "EUPLv1.2"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Event", "MouseEvent", "console", "CssStyleDeclaration", "EventTarget", "EventListener", "CssStyleRule", "HtmlCanvasElement", "CanvasRenderingContext2d"] }

[profile.release]
lto = true
opt-level = 's'
strip = true
panic = "abort"
